[package]
name = "dip"
version = "0.1.3"
authors = ["Tadashi G. Takaoka <tadashi.g.takaoka@gmail.com>"]
edition = "2018"
description = "Dual Inline Package visualizer with ASCII art"
repository = "https://github.com/tgtakaoka/dip.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "*"
structopt = "*"
toml = "*"
unicode-segmentation = "*"
